@@ -31,11 +31,10 @@
 
 #define NULL ((void*)0)
 
-/* This should be queried from the machine in the non-TAS case.
- * For now assume that if we are not using the fake address space
- * ids then we have a single address space. This version of printf
- * doesn't work with multiple address spaces anyways. */
-#define OCL_CONSTANT_AS
+/* Produce a SPIR-V compliant bitcode where the format string is
+   in the constant address space (2 in SPIR-V). Address space cast
+   in Workgroup.cc in case of native compilation. */
+#define PRINTF_FMT_STR_AS __attribute__ ((address_space (2)))
 
 typedef intptr_t ssize_t;
 
